# XenonDoping

./: .MaGeSVNInfo.hh  .gitignore  .temp.swp  GNUmakefile  GNUmakefile.in  LGND_1T.json  LGND_200.json  MGDOInstall.txt  README_to_use_configure  ReleaseNotes.txt  Release_CVSTag_Info.txt  config.status  configure  configure.ac  gdml.m4  geant4.m4  list  mage-config  mage-config.in  mgdo.m4  root.m4  setup.csh  setup.csh.in  setup.sh  setup.sh.in  temp
GETools/: Dockerfile_decay0  Makedecay0  README_decay0.md  decay0.for  makefile  reconstruct.c  run_co60  run_ge68
MGTools/templates/: MGcodeTemplate.cc  MGheadertemplate.hh
MJTools/: GNUmakefile  RD_ASCII_Tree.txt  buildClass.sh  createPackage.sh  createTarball  cvsSetup.csh  cvsSetup.sh  fetchRelease.csh  fetchRelease.sh  geant4Setup.csh  geant4Setup.sh  geant4Setup_4_7.csh  geant4Setup_4_7_1.csh  geant4Setup_4_7_1.sh  geant4Setup_4_7_1_p01.csh  geant4Setup_4_7_1_p01.sh  getPkg.sh  getRel.sh  makeG4include.sh  manageTonScaleSimulationTasks.py  setupMajorana.csh  setupMajorana.sh  submitProdJob.csh  submitProdJobNeutrons.csh  submitProdJobRD.csh  submitProdJobRDDecay0.csh  submitProdJobWangNeutrons.csh
MJTools/pkgTemplate/: GNUmakefile
MJTools/templates/: MJcodeTemplate.cc  MJheaderTemplate.hh
analysis/: DumpEvent.cxx  FEL01.c  GNUmakefile  GNUmakefile.in  LANLCLoverCo60Co57.c  MJ57Banger.cxx  MSUtext.cxx  e_ionization01.c  libROOT_ioROOT.rootmap  libROOT_ioROOT_rdict.pcm  libROOT_mjioROOT.rootmap  libROOT_mjioROOT_rdict.pcm  rootplot.cxx  txt2G4Steps.cxx
bacongeometry/bacongeometry/: BACON_Baseline.hh  BACON_Baseline.hh~  BACON_BaselineMessenger.hh
bacongeometry/src/: .BACON_Baseline.cc.swp  BACON_Baseline.cc  BACON_Baseline.cc~  BACON_BaselineMessenger.cc
buildTools/: config.mk  config.mk.in  install.mk.in  mgbin.mk  mgbin.mk.in  noinstall.mk  rootsomake.mk  rootsomake.mk.in
doc/: GNUmakefile
doc/EvaluationReport/: gerda.ps  gerda.tex
doc/MCUsersGuide/: .03_HowTos.sgm.swp  01_Intro.sgm  02_GettingStarted.sgm  03_HowTos.sgm  04_HW-Env.sgm  05_Structure.sgm  06_Geometry.sgm  07_Physics.sgm  08_IO.sgm  09_Database.sgm  10_Waveforms.sgm  11_Generators.sgm  12_Documentation.sgm  13_Results.sgm  14_QAQC.sgm  A_Messengers.sgm  udg.sgm
doc/MaGeUsersGuide/: analysis.tex  biblio.tex  codestructure.tex  detectors.tex  generators.tex  geometries.tex  installation.tex  introduction.tex  io.tex  macro_commands.tex  makefile  physicslist.tex  start.tex  teststand.tex  usersguide.tex
doc/doxygen/: MaGeCfg
doc/poster/: MaGeTAUP05.ppt  jpconf.cls  jpconf11.clo  poster.tex
g4patches/: Geant4.9.2p02-gdml.patch  Geant4.9.3-gdml.patch  README  bug956patch
generators/: MJtestRDM.cc
generators/data/: 76Ge_0v_cor.txt  76Ge_0v_ses.txt  76Ge_2v_cor.txt  76Ge_2v_ses.txt  76Ge_2v_sums.txt  RIndexImag_SS.dat~  RIndexReal_SS.dat~
generators/generators/: MGGeneratorAmBe.hh  MGGeneratorBACoNSurfaceMuons.hh  MGGeneratorBACoNSurfaceMuonsMessenger.hh  MGGeneratorBaryonDecay.hh  MGGeneratorBaryonDecayMessenger.hh  MGGeneratorCable.hh  MGGeneratorCableMessenger.hh  MGGeneratorCosmicRayMuons.hh  MGGeneratorCosmicRayMuonsMessenger.hh  MGGeneratorCosmicRays.hh  MGGeneratorCosmicSurfMuons.hh  MGGeneratorCosmicSurfMuonsMessenger.hh  MGGeneratorDecay0.hh  MGGeneratorDecay0Interface.hh  MGGeneratorDecay0InterfaceMessenger.hh  MGGeneratorDoubleBeta.hh  MGGeneratorDoubleBetaMessenger.hh  MGGeneratorG4Gun.hh  MGGeneratorG4GunMessenger.hh  MGGeneratorGeneralSurfaceSampler.hh  MGGeneratorGeneralSurfaceSamplerMessenger.hh  MGGeneratorLGND200Calibration.hh  MGGeneratorLGND200CalibrationMessenger.hh  MGGeneratorLGNDLiquidArgon.hh  MGGeneratorLGNDLiquidArgon.hh~  MGGeneratorLGNDLiquidArgonMessenger.hh  MGGeneratorLGNDLiquidArgonMessenger.hh~  MGGeneratorMJDCalibration.hh  MGGeneratorMJDCalibrationMessenger.hh  MGGeneratorMUSUNInterface.hh  MGGeneratorMUSUNInterfaceMessenger.hh  MGGeneratorMeiHimeMu.hh  MGGeneratorMuonsFromFile.hh  MGGeneratorMuonsFromFileMessenger.hh  MGGeneratorNeutrons.hh  MGGeneratorNeutronsAtGS.hh  MGGeneratorNeutronsAtGSMessenger.hh  MGGeneratorPNNL.hh  MGGeneratorPNNLCascade.hh  MGGeneratorPNNLCascadeEvent.hh  (+30 more)
generators/src/: .MGGeneratorGeneralSurfaceSamplerMessenger.cc.swp  .MGGeneratorPrimaryMessenger.cc.swp  MGGeneratorAmBe.cc  MGGeneratorBACoNSurfaceMuons.cc  MGGeneratorBACoNSurfaceMuonsMessenger.cc  MGGeneratorBaryonDecay.cc  MGGeneratorBaryonDecayMessenger.cc  MGGeneratorCable.cc  MGGeneratorCableMessenger.cc  MGGeneratorCosmicRayMuons.cc  MGGeneratorCosmicRayMuonsMessenger.cc  MGGeneratorCosmicRays.cc  MGGeneratorCosmicSurfMuons.cc  MGGeneratorCosmicSurfMuonsMessenger.cc  MGGeneratorDecay0.cc  MGGeneratorDecay0Interface.cc  MGGeneratorDecay0InterfaceMessenger.cc  MGGeneratorDoubleBeta.cc  MGGeneratorDoubleBetaMessenger.cc  MGGeneratorG4Gun.cc  MGGeneratorG4GunMessenger.cc  MGGeneratorGeneralSurfaceSampler.cc  MGGeneratorGeneralSurfaceSamplerMessenger.cc  MGGeneratorLGND200Calibration.cc  MGGeneratorLGNDLiquidArgon.cc  (+48 more)
gerdageometry/: README_BEGe  README_matrixfile
io/: GNUmakefile  GNUmakefile.in  README_MJLogger
lngsgesetups/: GNUmakefile
macros/: GNUmakefile  HPNeutronTest.mac  README  SimpleCoax.mac  batchjobs.sh  runbatch.sh
management/: GNUmakefile  GNUmakefile.in~  GNUmakefile~  MaGe.cc
materials/: GNUmakefile
mjio/: GNUmakefile  GNUmakefile.in
mjprocessors/: GNUmakefile  GNUmakefile.in  MJAnalysis.cc  MJAnalysisWF.cc
munichteststand/: GNUmakefile.in
sandbox/: EFieldAnalytic.cc  GNUmakefile  GNUmakefile.in  TestCrystalHits.cc  TestDriftVelocity.cc  TestGenWFforEvents.cc  TestM3D2S.cc  TestM3dcrPPCCrystalFields.cc  TestOccupancyCustom.cc  TestOccupancyMaGe.cc  TestSOREField.cc  TestSiggen.cc  TestSiggenDriftVelocity.cc  TestSiggenUtils.cc  TestWFGenFromDrift.cc  TestWFResampler.cc  TestWaveforms.cc  WaveformBrowser.cc  drawPS.cc  drawTrjs.cc
tonscalegeometry/: TSMacro.mac  TSvis.mac
validation/: MaGeInfo.py  MaGeQuickCheck.py  MaGeValidation.py  build.sh  readme.txt  references.bib  template.tex  validation.config  version.mac
waveform/: GNUmakefile  GNUmakefile.in  README.txt  wf.C
(+2126 files in other folders)
